# sipnab

./: .dockerignore  .gitignore  BACKERS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO.md  build.rs  codecov.yml  deny.toml  implementation-plan-phases-8-10.md  implementation-plan-v6.md  install.sh  sipnab-x86_64-unknown-linux-musl.sha256  tools_gen_fixture.rs
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  pages.yml  quality.yml  release.yml  wiki-sync.yml
benches/: parser_bench.rs  store_bench.rs
contrib/: sipnab.service  sipnabrc.example
contrib/deb/: build-deb.sh
contrib/fail2ban/: sipnab-jail.conf  sipnab-scanner.conf
contrib/grafana/: sipnab-dashboard.json
contrib/homebrew/: sipnab.rb  test-update-formula.sh  update-formula.sh
contrib/observability/: .env.example  README.md  docker-compose.yml  sipnab-hep.service
contrib/prometheus/: sipnab-alerts.yml
contrib/rpm/: sipnab.spec
crates/sipnab-audio/: Cargo.toml
crates/sipnab-audio/src/: lib.rs
demos/: 01-intro.tape  02-mark-delta.tape  03-save-formats.tape  04-filter.tape  05-file-open.tape  hero.tape
docker/cross/: Dockerfile.aarch64-unknown-linux-musl  Dockerfile.x86_64-unknown-linux-musl
docs/: auth.md  benchmarks.md  cli-reference.md  config-reference.md  examples.md  fault-model.md  filter-dsl.md  install.md  keybindings.md  mcp-overview.md  mcp-setup.md  mcp-tools.md  output-formats.md  patreon-launch-post.md  theme-guide.md
docs/design/: pcapng-metadata.md
docs/internals/: tui-testing.md  zero-copy-payloads.md
docs/research/: capture-performance.md
fuzz/: Cargo.toml
fuzz/corpus/keylog_line/: utf8-2byte  utf8-char-boundary-crash
fuzz/fuzz_targets/: filter_dsl.rs  hep_parser.rs  keylog_line.rs  rtcp_parser.rs  rtp_parser.rs  sdp_parser.rs  sip_parser.rs  srtp_keys.rs  stir_shaken.rs  tls_records.rs  websocket_frame.rs
harness/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
harness/opensips/: Dockerfile  entrypoint.sh  opensips.cfg.tmpl
harness/rtpengine/: Dockerfile  entrypoint.sh
harness/scripts/: mcp-smoke.sh  print-laptop-config.sh  rotate-token.sh
harness/sipnab/: Dockerfile  entrypoint.sh
harness/sipp/: Dockerfile  run-uac-loop.sh  run-uas.sh  scenario-matrix.txt
man/: sipnab.1
scripts/: build-wiki.py  deploy-website.sh  test-pre-push.sh
src/: auth.rs  cli.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  names.rs  parallel.rs  pipeline.rs  privilege.rs  process_isolation.rs  signals.rs  test_utils.rs  wasm.rs
src/capture/: atomic.rs  channel.rs  decrypt.rs  device.rs  dtls.rs  file.rs  hep.rs  live.rs  mod.rs  packet.rs  parse.rs  pcap_reader.rs  pcapng_meta.rs  reassembly.rs  rsa_key.rs  tls.rs  websocket.rs  writer.rs
src/mcp/: mod.rs  server.rs  shape.rs  transport.rs
src/output/: api.rs  call_report.rs  cli_print.rs  dialog_report.rs  event_exec.rs  fail2ban.rs  hexdump.rs  json.rs  mod.rs  prometheus.rs  prometheus_server.rs  synthetic.rs  wireshark.rs
src/rtp/: audio_export.rs  diagnosis.rs  dtmf.rs  g711.rs  heuristic.rs  mod.rs  opus_decode.rs  parser.rs  playback.rs  quality.rs  rtcp.rs  srtp.rs  stream.rs  stream_store.rs  wav.rs
src/security/: alerting.rs  digest_leak.rs  fraud_detect.rs  mod.rs  reg_flood.rs  scanner_detect.rs  scanner_kill.rs
src/sip/: dialog.rs  dialog_store.rs  dsl.rs  matcher.rs  message.rs  method.rs  mod.rs  parser.rs  response_codes.rs  sdp.rs  sdp_timeline.rs  siprec.rs  stir_shaken.rs  timing.rs
src/tui/: call_flow.rs  call_list.rs  events.rs  help.rs  mod.rs  msg_raw.rs  render.rs  save.rs  stream_detail.rs  stream_list.rs  theme.rs
tasks/: lessons.md  test-coverage-todo.md  todo.md  verification-plan.md  verification-spec.md  verification-status.md  website-fixes.md
tests/: api_test.rs  api_token_test.rs  capture_test.rs  cli_defaults_test.rs  cli_flag_behavior_test.rs  cli_goldens.rs  cli_options_test.rs  cli_test.rs  config_examples_test.rs  config_test.rs  config_wiring_test.rs  docs_drift_test.rs  error_types_test.rs  flag_coverage_test.rs  fuzz_corpus_replay.rs  hep_test.rs  integration_test.rs  json_schema_test.rs  keybinding_drift_test.rs  mcp_http_test.rs  mcp_stdio_test.rs  mcp_token_rotation_test.rs  mcp_token_test.rs  metrics_test.rs  parse_path_test.rs  pipeline_test.rs  privilege_drop_test.rs  resource_bounds_test.rs  rtp_integration_test.rs  security_test.rs  smoke_fuzz_test.rs  support_selftest.rs  tui_e2e_test.rs  tui_snapshot_test.rs  tui_state_test.rs  wasm_exports_test.rs
tests/fixtures/: sip_call.pcap  udp_5060.pcap
tests/pcap-samples/: codec-negotiation.pcap  invite-opus-bye.pcap  register-invite-reinvite-bye.pcap  speech_8k_ulaw.pcap  voicecmd_combined.pcap
tests/schemas/: call_report.schema.json  dialog.schema.json  message.schema.json  stream.schema.json
tests/snapshots/: tui_snapshot_test__tui_snapshots__call_flow_basic.snap  tui_snapshot_test__tui_snapshots__call_flow_color_callid.snap  tui_snapshot_test__tui_snapshots__call_flow_detail_scrollbar_on_overflow.snap  tui_snapshot_test__tui_snapshots__call_flow_extended_flow.snap  tui_snapshot_test__tui_snapshots__call_flow_fold_expanded.snap  tui_snapshot_test__tui_snapshots__call_flow_raw_preview_off.snap  tui_snapshot_test__tui_snapshots__call_flow_sdp_full.snap  tui_snapshot_test__tui_snapshots__call_flow_sdp_summary.snap  tui_snapshot_test__tui_snapshots__call_flow_split_focus_detail.snap  tui_snapshot_test__tui_snapshots__call_flow_timestamp_delta_prev.snap  tui_snapshot_test__tui_snapshots__call_flow_timestamp_scaled.snap  tui_snapshot_test__tui_snapshots__call_flow_with_mark.snap  tui_snapshot_test__tui_snapshots__call_list_autoscroll_off.snap  tui_snapshot_test__tui_snapshots__call_list_empty.snap  (+35 more)
website/: README.md  config.toml  index.html  og-image-brief.md
(+94 files in other folders)
