[package]
name = "sipnab"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.92"
authors = ["Norm Brandinger"]
description = "SIP & RTP capture, analysis, and security"
license = "GPL-3.0-only"
repository = "https://github.com/NormB/sipnab"
homepage = "https://sipnab.com"
default-run = "sipnab"
keywords = ["sip", "voip", "rtp", "pcap", "sngrep"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Phase 1: Capture & core
pcap = "2"
etherparse = "0.16"
clap = { version = "4", features = ["derive", "env", "string"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
crossbeam-channel = "0.5"
libc = "0.2"

# Phase 2: SIP parsing & output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pcap-file = "2"
nom = "7"

# Phase 2: Error handling
anyhow = "1"
thiserror = "2"

# Phase 3: TUI
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }
unicode-width = { version = "0.2", optional = true }

# Phase 5: STIR/SHAKEN & analysis
base64 = "0.22"

# Phase 5: TLS/Crypto (feature-gated)
zeroize = { version = "1", features = ["derive"], optional = true }
ring = { version = "0.17", optional = true }
rustls = { version = "0.23", optional = true }

# Phase 5: Metrics & API
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Phase 6: gRPC
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3"
insta = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:unicode-width"]
tls = ["dep:zeroize", "dep:ring", "dep:rustls"]
tls-wolfssl = ["tls"]
tls-openssl = ["tls"]
hep = []
grpc = ["dep:tonic", "dep:prost"]
api = ["dep:axum", "dep:tokio"]
full = ["tui", "tls", "hep", "grpc", "api"]

[lib]
name = "sipnab"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "sipnab"
path = "src/main.rs"

[[bin]]
name = "gen_fixture"
path = "tools_gen_fixture.rs"
