[package]
name = "sipnab"
version = "0.3.1"
edition = "2024"
rust-version = "1.92"
authors = ["Norm Brandinger"]
description = "SIP & RTP capture, analysis, and security"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NormB/sipnab"
homepage = "https://sipnab.com"
default-run = "sipnab"
keywords = ["sip", "voip", "rtp", "pcap", "sngrep"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Phase 1: Capture & core
pcap = { version = "2", optional = true }
etherparse = "0.16"
clap = { version = "4", features = ["derive", "env", "string"], optional = true }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
log = "0.4"
env_logger = { version = "0.11", optional = true }
parking_lot = "0.12"
crossbeam-channel = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

# Phase 2: SIP parsing & output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pcap-file = { version = "2", optional = true }
nom = "7"

# Phase 2: Error handling
anyhow = "1"
thiserror = "2"

# Phase 3: TUI
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
unicode-width = { version = "0.2", optional = true }

# Phase 5: STIR/SHAKEN & analysis
base64 = { version = "0.22", optional = true }

# Phase 5: TLS/Crypto (feature-gated)
zeroize = { version = "1", features = ["derive"], optional = true }
ring = { version = "0.17", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", features = ["alloc"], optional = true }

# Phase 5: Metrics & API
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# WASM browser integration (feature-gated)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
insta = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
expectrl = "0.8"

[[bench]]
name = "parser_bench"
harness = false

[features]
default = ["native", "tui"]
# Native platform deps (not available in WASM)
native = ["dep:pcap", "dep:clap", "dep:env_logger", "dep:crossbeam-channel", "dep:libc", "dep:pcap-file"]
tui = ["native", "dep:ratatui", "dep:crossterm", "dep:unicode-width"]
tls = ["dep:zeroize", "dep:ring", "dep:rustls", "dep:aes", "dep:cbc", "dep:base64"]
hep = []
api = ["native", "dep:axum", "dep:tokio", "dep:base64"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:console_error_panic_hook"]
full = ["native", "tui", "tls", "hep", "api"]

[lib]
name = "sipnab"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "sipnab"
path = "src/main.rs"

[[bin]]
name = "gen_fixture"
path = "tools_gen_fixture.rs"
