[workspace]
members = [".", "crates/sipnab-audio"]
# `fuzz/` is a standalone cargo-fuzz package (its own build via `cargo fuzz`);
# it depends on this crate by path and must NOT be pulled into the workspace.
exclude = ["fuzz"]
resolver = "2"

[package]
name = "sipnab"
version = "0.4.4"
edition = "2024"
rust-version = "1.92"
authors = ["Norm Brandinger"]
description = "SIP & RTP capture, analysis, and security tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NormB/sipnab"
homepage = "https://sipnab.com"
default-run = "sipnab"
keywords = ["sip", "rtp", "voip", "pcap", "network"]
categories = ["network-programming", "command-line-utilities"]
exclude = ["website/", "demos/", "tasks/", "fuzz/", ".githooks/", "tests/pcap-samples/"]

[dependencies]
# Phase 1: Capture & core
pcap = { version = "2", optional = true }
# Transparent decompression of gzip-compressed capture files (libpcap, unlike
# Wireshark, cannot read them directly). Native-only; see the `native` feature.
flate2 = { version = "1", optional = true }
tempfile = { version = "3", optional = true }
etherparse = "0.20"
clap = { version = "4", features = ["derive", "env", "string"], optional = true }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
log = "0.4"
env_logger = { version = "0.11", optional = true }
# Phase 8.0b: tracing facade is unconditional; subscriber is gated under
# the `native` feature alongside env_logger.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"], optional = true }
tracing-log = { version = "0.2", optional = true }
parking_lot = "0.12"
crossbeam-channel = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

# Phase 2: SIP parsing & output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
# Format-preserving TOML editing for surgical writes to the user's sipnabrc
# (updates the [names.manual] table without clobbering comments/other sections).
toml_edit = "0.22"
pcap-file = { version = "2", optional = true }
nom = "8"
indexmap = "2"
bytes = "1"

# Phase 2: Error handling
anyhow = "1"
thiserror = "2"

# Phase 3: TUI
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
unicode-width = { version = "0.2", optional = true }

# Phase 5: STIR/SHAKEN & analysis
base64 = { version = "0.22", optional = true }

# Auth: HMAC self-describing bearer tokens (pure-Rust RustCrypto). Available
# whenever `api` OR `mcp` is enabled; deliberately NOT tied to the `tls`
# feature (no `ring`).
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.11", optional = true }

# Phase 5: TLS/Crypto (feature-gated)
zeroize = { version = "1", features = ["derive"], optional = true }
ring = { version = "0.17", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }
aes = { version = "0.9", optional = true }
cbc = { version = "0.2", features = ["alloc"], optional = true }
# RSA private-key (`--tls-key`) decryption of the TLS 1.2 RSA-kx pre-master
# secret. PKCS#1 v1.5; PEM parsing for PKCS#1/#8 private keys.
rsa = { version = "0.9", default-features = false, features = ["std", "pem"], optional = true }

# Audio playback (feature-gated). The rodio/ALSA dependency lives in the
# `sipnab-audio` cdylib plugin (crates/sipnab-audio); the main binary only
# dlopen's it lazily via libloading so there is no load-time libasound NEEDED.
libloading = { version = "0.9", optional = true }

# Opus codec (pure Rust, no FFI — always available for WAV export)
opus-decoder = "0.1"

# Phase 5: Metrics & API
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Phase 8.1: MCP server (Model Context Protocol)
rmcp = { version = "1", default-features = false, features = ["server", "transport-io", "macros", "schemars"], optional = true }

# WASM browser integration (feature-gated)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
bytes = "1"
parking_lot = "0.12"
trycmd = "1"
jsonschema = "0.46"
clap = { version = "4", features = ["derive", "env", "string"] }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
insta = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
libc = "0.2"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[features]
default = ["native", "tui", "audio"]
# Native platform deps (not available in WASM)
native = ["dep:pcap", "dep:clap", "dep:env_logger", "dep:crossbeam-channel", "dep:libc", "dep:pcap-file", "dep:tracing-subscriber", "dep:tracing-log", "dep:flate2", "dep:tempfile"]
tui = ["native", "dep:ratatui", "dep:crossterm", "dep:unicode-width"]
tls = ["dep:zeroize", "dep:ring", "dep:rustls", "dep:aes", "dep:cbc", "dep:base64", "dep:rsa"]
hep = ["native"]
audio = ["dep:libloading", "dep:libc"]
api = ["native", "dep:axum", "dep:tokio", "dep:base64", "dep:hmac", "dep:sha2"]
mcp = ["native", "dep:tokio", "dep:rmcp", "dep:base64", "dep:hmac", "dep:sha2"]
mcp-http = ["mcp", "api", "rmcp/transport-streamable-http-server"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:console_error_panic_hook"]
full = ["native", "tui", "tls", "hep", "api", "audio", "mcp", "mcp-http"]

[lib]
name = "sipnab"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = "line-tables-only"

[[bin]]
name = "sipnab"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "gen_fixture"
path = "tools_gen_fixture.rs"
required-features = ["native"]
