[package]
name = "sipnab-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# Detach from the parent workspace: `fuzz/` is built standalone by cargo-fuzz
# and depends on the parent crate by path. Without this, the parent's
# `[workspace]` would claim it ("believes it's in a workspace when it's not").
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sipnab = { path = "..", default-features = false, features = ["native", "hep", "tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[[bin]]
name = "fuzz_sip_parser"
path = "fuzz_targets/sip_parser.rs"

[[bin]]
name = "fuzz_sdp_parser"
path = "fuzz_targets/sdp_parser.rs"

[[bin]]
name = "fuzz_rtp_parser"
path = "fuzz_targets/rtp_parser.rs"

[[bin]]
name = "fuzz_filter_dsl"
path = "fuzz_targets/filter_dsl.rs"

[[bin]]
name = "fuzz_hep_parser"
path = "fuzz_targets/hep_parser.rs"

[[bin]]
name = "fuzz_rtcp_parser"
path = "fuzz_targets/rtcp_parser.rs"

[[bin]]
name = "fuzz_websocket_frame"
path = "fuzz_targets/websocket_frame.rs"

[[bin]]
name = "fuzz_tls_records"
path = "fuzz_targets/tls_records.rs"

[[bin]]
name = "fuzz_stir_shaken"
path = "fuzz_targets/stir_shaken.rs"

[[bin]]
name = "fuzz_srtp_keys"
path = "fuzz_targets/srtp_keys.rs"

[[bin]]
name = "fuzz_keylog_line"
path = "fuzz_targets/keylog_line.rs"
